# blitz-tasks

./: .gitignore  .gitmodules  NOTICE  README.md  build.py
blitz-task_cpu_audio_dsp/: TASK.json
blitz-task_cpu_audio_dsp/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_cache_latency/: TASK.json
blitz-task_cpu_cache_latency/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_cad_solver/: TASK.json
blitz-task_cpu_cad_solver/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_compile/: TASK.json
blitz-task_cpu_compile/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_crypto_aes/: TASK.json
blitz-task_cpu_crypto_aes/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_crypto_chacha/: TASK.json
blitz-task_cpu_crypto_chacha/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_crypto_sha/: TASK.json
blitz-task_cpu_crypto_sha/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_crypto_sign/: TASK.json
blitz-task_cpu_crypto_sign/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_dataframe/: TASK.json
blitz-task_cpu_dataframe/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_fp_multi/: TASK.json
blitz-task_cpu_fp_multi/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_fp_single/: TASK.json
blitz-task_cpu_fp_single/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_hpc_fft/: TASK.json
blitz-task_cpu_hpc_fft/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_int_multi/: TASK.json
blitz-task_cpu_int_multi/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_int_single/: TASK.json
blitz-task_cpu_int_single/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_cpu_llm_infer/: TASK.json
blitz-task_cpu_llm_infer/translations/: de_DE.json  es_ES.json  (+3 more)
blitz-task_cpu_office_docs/: TASK.json
blitz-task_cpu_raytrace/: TASK.json
blitz-task_cpu_video_encode/: TASK.json
blitz-task_demo_c/: CMakeLists.txt  TASK.json
blitz-task_demo_c/app/: CMakeLists.txt
blitz-task_demo_c/src/: info.c.in
blitz-task_demo_cpp/: TASK.json
blitz-task_demo_rust/: Cargo.toml
blitz-task_disk_asset_load/: TASK.json
blitz-task_disk_db_oltp/: TASK.json
blitz-task_disk_rand_read/: TASK.json
blitz-task_disk_seek/: TASK.json
blitz-task_disk_seq_read/: TASK.json
blitz-task_disk_seq_write/: TASK.json
blitz-task_gpu_ai_train/: TASK.json
blitz-task_gpu_conv2d/: TASK.json
blitz-task_gpu_conv3d/: TASK.json
blitz-task_gpu_diffusion/: TASK.json
blitz-task_gpu_fillrate/: TASK.json
blitz-task_gpu_fp16/: TASK.json
blitz-task_gpu_fp32/: TASK.json
blitz-task_gpu_fp64/: TASK.json
blitz-task_gpu_game_scene/: TASK.json
blitz-task_gpu_image_filters/: TASK.json
blitz-task_gpu_int8/: TASK.json
blitz-task_gpu_matmul/: TASK.json
blitz-task_gpu_path_trace/: TASK.json
blitz-task_gpu_pcie_bidir/: TASK.json
blitz-task_gpu_pcie_d2h/: TASK.json
blitz-task_gpu_pcie_h2d/: TASK.json
blitz-task_gpu_vram_copy/: TASK.json
blitz-task_gpu_vram_read/: TASK.json
blitz-task_gpu_vram_write/: TASK.json
blitz-task_ram_bw_copy/: CMakeLists.txt  TASK.json
blitz-task_ram_bw_copy/app/: main.cpp
blitz-task_ram_bw_copy/include/: ram_bw_copy.hpp
blitz-task_ram_bw_copy/src/: kernels.hpp  kernels_avx.cpp  kernels_avx512.cpp  kernels_neon.cpp  kernels_scalar.cpp  kernels_sse2.cpp  kernels_sve.cpp  ram_bw_copy.cpp
blitz-task_ram_bw_copy/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_ram_bw_read/: CMakeLists.txt  TASK.json
blitz-task_ram_bw_write/: CMakeLists.txt  TASK.json
blitz-task_ram_bw_write/app/: main.cpp
blitz-task_ram_bw_write/include/: ram_bw_write.hpp
blitz-task_ram_bw_write/src/: kernels.hpp  kernels_avx.cpp  kernels_avx512.cpp  kernels_neon.cpp  kernels_scalar.cpp  kernels_sse2.cpp  kernels_sve.cpp  ram_bw_write.cpp
blitz-task_ram_bw_write/translations/: de_DE.json  es_ES.json  fr_FR.json  it_IT.json  pt_PT.json
blitz-task_ram_inmem_analytics/: TASK.json
blitz-task_ram_latency/: CMakeLists.txt  TASK.json
c_task_demo/: CMakeLists.txt  TASK.json
c_task_demo/app/: main.c
c_task_demo/include/: c_task_demo.h
c_task_demo/src/: c_task_demo.c
catalog/: domains.de_DE.json  domains.es_ES.json  domains.fr_FR.json  domains.it_IT.json  domains.json  domains.pt_PT.json  metrics.de_DE.json  metrics.es_ES.json  metrics.fr_FR.json  metrics.it_IT.json  metrics.json  metrics.pt_PT.json
cpp_task_demo/: CMakeLists.txt  TASK.json
cpp_task_demo/app/: CMakeLists.txt
cpp_task_demo/include/: cpp_task_demo.hpp
cpp_task_demo/src/: cpp_task_demo.cpp
rust_task_demo/: Cargo.toml  TASK.json
rust_task_demo/examples/: rust_task_demo_app.rs
rust_task_demo/src/: lib.rs
shared/gpu_runtime/: CMakeLists.txt
shared/gpu_runtime/app/gpu_runtime_query/: CMakeLists.txt  main.cpp
shared/gpu_runtime/include/gpgpu/: backend.hpp  device.hpp  runtime.hpp  setup.hpp  version.hpp
shared/gpu_runtime/src/: backend.cpp  device.cpp  preference.cpp  preference.hpp  report.cpp  runtime.cpp  search_paths.cpp  search_paths.hpp  version.cpp
shared/gpu_runtime/src/backends/: calling_convention.hpp  common.cpp  cuda.cpp  metal.cpp  metal.mm  oneapi.cpp  opencl.cpp  probe.hpp  rocm.cpp  vulkan.cpp
shared/gpu_runtime/src/platform/: lib_loader.hpp  lib_loader_unix.cpp  lib_loader_win.cpp
task-lib/c/: CMakeLists.txt
task-lib/c/include/: blitz_task.h
task-lib/cpp/: CMakeLists.txt
task-lib/cpp/include/: blitz_task.hpp
task-lib/rust/: Cargo.toml
task-lib/rust/src/: lib.rs
task-runtime/rust/: Cargo.toml  build.rs
task-runtime/rust/include/: blitz_task_runtime.h
task-runtime/rust/src/: ffi.rs  lib.rs
(+180 files in other folders)
