[package]
name = "blitz-task"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust framework for BlitzBench benchmark tasks — Task trait, callbacks, TASK.json parsing."

[lib]
name = "blitz_task"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
