[package]
name = "blitz-task-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "UDP + Ed25519 runtime adapter for BlitzBench tasks. Wraps a Task instance and drives it either in-process or over the UDP wire protocol."
build = "build.rs"

[lib]
name = "blitz_task_runtime"
path = "src/lib.rs"
# rlib: native Rust consumers (wrapper main.rs, blitz-lib portable mode).
# staticlib: C/C++ wrappers link this and call via the cbindgen-generated header.
crate-type = ["rlib", "staticlib"]

[dependencies]
blitz-task = { path = "../../task-lib/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", default-features = false, features = [] }
hex = "0.4"

[build-dependencies]
cbindgen = { version = "0.27", default-features = false }
